simple-observability/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: simple-observability
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-kibana-kb-http
                port:
                  number: 5601
