simple-observability/netpol-allow-es-internal-transport.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-es-internal-transport
  namespace: simple-observability
spec:
  podSelector:
    matchLabels:
      elasticsearch.k8s.elastic.co/cluster-name: simple-es
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              elasticsearch.k8s.elastic.co/cluster-name: simple-es
      ports:
        - protocol: TCP
          port: 9300
        - protocol: TCP
          port: 9200
  egress:
    - to:
        - podSelector:
            matchLabels:
              elasticsearch.k8s.elastic.co/cluster-name: simple-es
      ports:
        - protocol: TCP
          port: 9300
        - protocol: TCP
          port: 9200
