simple-observability/netpol-allow-kibana-to-es.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kibana-to-es
  namespace: simple-observability
spec:
  podSelector:
    matchLabels:
      elasticsearch.k8s.elastic.co/cluster-name: simple-es
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kibana.k8s.elastic.co/name: simple-kibana
      ports:
        - protocol: TCP
          port: 9200
